syntax = "proto3";

message State {
  string audio_id = 1;
  string playback = 2;
  uint64 timestamp = 3;
}

message Params {
  string dir = 1;
}
